--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -34,15 +34,15 @@
   "kv_namespaces": [
     {
       "binding": "KV",
-      "preview_id": "ef93d42dc4b34969bab404d2e80f8dd3",
-      "id": "ef93d42dc4b34969bab404d2e80f8dd3" // IMPORTANT: Change this to your KV namespace ID
+      "preview_id": "a9644f21b98045e88490cf5bf2ec495b",
+      "id": "a9644f21b98045e88490cf5bf2ec495b"
     }
   ],
   "r2_buckets": [
     {
       "binding": "R2",
       "preview_bucket_name": "sink",
-      "bucket_name": "sink" // IMPORTANT: Change this to your R2 bucket name, or create one with `wrangler r2 bucket create sink`
+      "bucket_name": "sink"
     }
   ],
   "triggers": {
